# calliope

./: Cargo.toml  README.md
calliope/: Cargo.toml
calliope-common/: Cargo.toml
calliope-common/src/: board.rs  gpio.rs  lib.rs
calliope/src/: lib.rs
demos/beep/: Cargo.toml
demos/beep/src/: main.rs
demos/blink/: Cargo.toml  Embed.toml
demos/blink/src/: main.rs
demos/hello_world/: Cargo.toml  README.md
demos/hw_tests/: Cargo.toml  README.md
demos/hw_tests/src/: main.rs
demos/i2c_bmx055/: Cargo.toml
demos/i2c_bmx055/src/: main.rs
demos/ws2812/: Cargo.toml
demos/ws2812/src/: main.rs
