[package]
name = "calliope-common"
version = "0.0.2"
edition = "2021"
description = "Common parts for the calliope board support crate."
license = "GPL-3.0-or-later"
readme = "../README.md"

repository = "https://github.com/bitmuster/calliope"
homepage = "https://gitlab.com/bitmuster/calliope"
authors = ["Michael Abel <mabel@bitmuster.org>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# embedded-hal = "0.2.4"
nrf51-hal = "0.14.0"
