[package]
name = "calliope"
version = "0.0.1"
edition = "2021"
description = "Board support crate for the Calliope Mini (calliope.cc)"
license = "GPL-3.0-or-later"
readme = "../README.md"

repository = "https://github.com/bitmuster/calliope"
homepage = "https://gitlab.com/bitmuster/calliope"
authors = ["Michael Abel <mabel@bitmuster.org>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.calliope-common]
path = "../calliope-common"
version = "0.0.1"

[dependencies]
